Fixes ul / ol wrong font size.

--- a/src/theme/fhac-theme/styles/modules/parent-page-section.scss
+++ b/src/theme/fhac-theme/styles/modules/parent-page-section.scss
@@ -31,6 +31,12 @@
 
 	}
 
+	ul, ol {
+		
+		font-size:inherit;
+
+	}
+
 }
 
 .parent-page-section--back {
